--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
   </head>
   <body>
     <header>
-      <h1>Project: About Me</h1>
+      <h1>Who in the world is Sang?</h1>
     </header>
     <main>
+      <section class="welcome"> <!-- This is the welcome message section-->
+      <!-- TO DO: COMPLETE THIS SECTION-->
+      </section>
       <section class="bio"> <!-- This is the biography section: it provides a brief summary of my bio -->
         <h2>Biography</h2>
-        <p> Hello. My name is Sang and this page is provided to help you learn more about me through a series of Q&As. Before I provide a short bio, I want to thank you for taking the time to visit and playing along. </p>
-        <p> I currently reside in Seattle, WA. I have been a transplant to the Pacific Northwest (PNW) since 2015. My wife and I both work in the technology sector, but I am currently taking some time off to tackle personal projects and grow in areas that I have been wanting to for some time (e.g. home improvememnt, learning how to code!).</p>
-        <P> Prior to the tech industry, I served in the U.S. Air Force and I did that for about 10 years. It was truly an honor and a privilege to serve.</P>
+        <p> Hello. My name is Sang. This page is provided to help you learn more about me. Before I start with a quick bio, I want to thank you for taking the time to visit. </p>
+        <p> I currently reside in Seattle, WA. I have been a transplant to the Pacific Northwest (PNW) since 2015. My wife and I both work in the technology sector and have couple of rug rats in tow. I am currently taking some time off from the industry to tackle personal projects (e.g. home improvement) and growth (e.g. learning to code!). Prior to the tech industry, I served active duty in the U.S. Air Force for about 10 years. </P>
       </section>
       <section class="education"> <!-- This is the biography section: it provides a brief overview of my education-->
         <h2>Education History</h2>
-        <p>I have been extremely lucky and fortunate to have had the opportunity to pursue higher education. However, I believe that learning is a life-long pursuit and one is <i>never</i> truly "done". </p>
         <ul>
           <li>Carnegie-Mellon University, MBA (2014)</li>
           <li>Georgia Institute of Technology, BS (2000)</li>
@@ -28,19 +29,23 @@
         <h2>Work History</h2>
         <ul>
           <li>Amazon.com, Inc. (2016 - 2020)</li>
-          <li>Intel Corporation (2014 - 2016</li>
+          <li>Intel Corporation (2014 - 2016)</li>
           <li>United States Air Force (2002 - 2012)</li>
         </ul>
       </section>
       <section class="goals"> <!-- This is the Goals section: it describes my goal for being part of code fellows-->
-        <h2>Code Fellows Goals</h2>
+        <h2>Why is Sang in Code Fellows (Goals)</h2>
         <p> My primary goal in attending Code Fellows is to build my software development technical skills. I have been working with software (and hardware) developers but in order to better understand the "under the hood" technology, I wanted to get hands-on to learn the fundamentals. </p>
-        <p> My secondary goal is to better understand the world of coding bootcamps. As a transitioning veteran and someone who believes in life-long learning, I believe that careers in tech offers the best transition for veterans and I want to be able to advise and counsel those that reach out to me so I can speak more credibly; especially since federal organizations (e.g. VA) is recognizing coding bootcamps as viable transition pipeline.</p>
+        <p> My secondary goal is to better understand the world of coding bootcamps. As a transitioning veteran and someone who believes in life-long learning, I believe that careers in tech offers one of the best opportunities for veterans. I believe it's a good fit because veterans bring highly transferrable skills to the industry as well (acknowledging that I may be biased). I want to be able to credibly advise and counsel transitioning veterans that reach out to me. This is especially poignant since many have earned educational benefits through their service and federal organizations (e.g. VA) are funding "non-degree programs", such as coding bootcamps, as viable transition pipelines.</p>
+      </section>
+      <section class="goodBye"> <!-- This is the closing message section -->
+      <!-- TO DO: COMPLETE THIS SECTION-->
       </section>
     </main>
     <footer> 
-      
+      &copy; 2020 | Seattle, WA
     </footer>
-    <script src="js/app.js" type="text/javascript"></script>
+    <script src="js/app.js" type="text/javascript"> </script>
+
   </body>
 </html>
