updated with minor changes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </ul>
       </section>
       <section class="goals"> <!-- This is the Goals section: it describes my goal for being part of code fellows-->
-        <h2>Why is Sang in Code Fellows (Goals)</h2>
+        <h2>Why is Sang in Code Fellows? (Goals)</h2>
         <p> My primary goal in attending Code Fellows is to build my software development technical skills. I have been working with software (and hardware) developers but in order to better understand the "under the hood" technology, I wanted to get hands-on to learn the fundamentals. </p>
         <p> My secondary goal is to better understand the world of coding bootcamps. As a transitioning veteran and someone who believes in life-long learning, I believe that careers in tech offers one of the best opportunities for veterans. I believe it's a good fit because veterans bring highly transferrable skills to the industry as well (acknowledging that I may be biased). I want to be able to credibly advise and counsel transitioning veterans that reach out to me. This is especially poignant since many have earned educational benefits through their service and federal organizations (e.g. VA) are funding "non-degree programs", such as coding bootcamps, as viable transition pipelines.</p>
       </section>
