updated with new styling

--- a/index.html
+++ b/index.html
@@ -19,21 +19,23 @@
           <h2>Goals (e.g. Why Code Fellows?)</h2>
           <p> My goal in attending Code Fellows is to build my software development technical skills. I have been working with software (and hardware) developers but in order to better understand the "under the hood" technology, I wanted to get more hands-on developer experience. </p>        
         </div>
-        <div id="education"> <!-- [Story 1, Task 1; Story 3, Task 2] This is the biography div: it provides a brief overview of my education-->
-        <h2>Education </h2>
-        <ul>
-          <li>Carnegie-Mellon University, MBA (2014)</li>
-          <li>Georgia Institute of Technology, BS (2000)</li>
-        </ul>
-      </div>
-      <div id="experience"> <!-- [Story 1, Task 1; Story 3, Task 2] This is the experience div: it provides a brief overview of my work experience-->
-        <h2>Experience</h2>
-        <ul>
-          <li>Amazon.com, Inc. (2016 - 2020)</li>
-          <li>Intel Corporation (2014 - 2016)</li>
-          <li>United States Air Force (2002 - 2012)</li>
-        </ul>
-      </div>      
+        <div id = "history">
+          <div id="education"> <!-- [Story 1, Task 1; Story 3, Task 2] This is the biography div: it provides a brief overview of my education-->
+            <h2>Education </h2>
+            <ul>
+              <li>Carnegie-Mellon University, MBA (2014)</li>          
+              <li>Georgia Institute of Technology, BS (2000)</li>
+            </ul>
+          </div>
+          <div id="experience"> <!-- [Story 1, Task 1; Story 3, Task 2] This is the experience div: it provides a brief overview of my work experience-->
+            <h2>Experience</h2>
+            <ul>
+              <li>Amazon.com, Inc. (2016 - 2020)</li>
+              <li>Intel Corporation (2014 - 2016)</li>
+              <li>United States Air Force (2002 - 2012)</li>
+            </ul>
+          </div> 
+        </div>             
       <div class="topTen"><!-- [Story 3, Task 1] This is the Goals div: it describes my goal for being part of code fellows-->
         <h2 class="topTen">Top 10 Favorite Foreign Movies</h2>
         <ol>
