updated all html, css, and js files for submission

--- a/index.html
+++ b/index.html
@@ -1,60 +1,75 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Project: About Me</title>
-    <link href="css/reset.css" type="text/css" rel="stylesheet" />
-    <link href="css/style.css" type="text/css" rel="stylesheet" />
-  </head>
-  <body>
-    <header>
-      <h1>Who in the world is Sang?</h1>
-    </header>
-    <main>
-      <div id="bio"> <!-- [Story 1, Task 1] This is the biography div: it provides a brief summary of my bio -->
-        <h2>Biography</h2>
-        <p> Hello. My name is Sang. This page is provided to help you learn more about me. Before I start with a quick bio, I want to thank you for taking the time to visit. </p>
-        <p> I currently reside in Seattle, WA. I have been a transplant to the Pacific Northwest (PNW) since 2015. My wife and I both work in the technology sector and have couple of rug rats in tow. I am currently taking some time off from the industry to tackle personal projects (e.g. home improvement) and growth (e.g. learning to code!). Prior to the tech industry, I served active duty in the U.S. Air Force for about 10 years. </P>
-        </div>
-        <div id="goals"> <!-- [Story 1, Task 1] This is the Goals div: it describes my goal for being part of code fellows-->
-          <h2>Goals (e.g. Why Code Fellows?)</h2>
-          <p> My goal in attending Code Fellows is to build my software development technical skills. I have been working with software (and hardware) developers but in order to better understand the "under the hood" technology, I wanted to get more hands-on developer experience. </p>        
-        </div>
-        <div id = "history">
-          <div id="education"> <!-- [Story 1, Task 1; Story 3, Task 2] This is the biography div: it provides a brief overview of my education-->
-            <h2>Education </h2>
-            <ul>
-              <li>Carnegie-Mellon University, MBA (2014)</li>          
-              <li>Georgia Institute of Technology, BS (2000)</li>
-            </ul>
-          </div>
-          <div id="experience"> <!-- [Story 1, Task 1; Story 3, Task 2] This is the experience div: it provides a brief overview of my work experience-->
-            <h2>Experience</h2>
-            <ul>
-              <li>Amazon.com, Inc. (2016 - 2020)</li>
-              <li>Intel Corporation (2014 - 2016)</li>
-              <li>United States Air Force (2002 - 2012)</li>
-            </ul>
-          </div> 
-        </div>             
-      <div class="topTen"><!-- [Story 3, Task 1] This is the Goals div: it describes my goal for being part of code fellows-->
-        <h2 class="topTen">Top 10 Favorite Foreign Movies</h2>
-        <ol>
-          <li>Bicycle Thieves (Italy, 1948)</li>  
-          <li>Lives of Others (Germany, 2006)</li>
-          <li>Once (Ireland, 2007)</li>
-          <li>Monsoon Wedding (India, 2001)</li>
-          <li>Persepolis (France, 2007)</li>
-          <li>Amelie (France, 2001)</li>
-          <li>Chungking Express (Hong Kong, 1996)</li>
-          <li>Friend (South Korea, 2001)</li>    
-          <li>Il Postino (Italy, 1994)</li>
-          <li>Kung Fu Hustle (China, 2004)</li>                       
-        </ol>
+
+<head>
+  <title>Project: About Me</title>
+  <link href="css/reset.css" type="text/css" rel="stylesheet" />
+  <link href="css/style.css" type="text/css" rel="stylesheet" />
+</head>
+
+<body>
+  <header>
+    <h1 link href="https://fonts.googleapis.com/css2?family=Squada+One&display=swap" rel="stylesheet">Who in the world
+      is Sang?</h1>
+  </header>
+  <main>
+    <div id="bio">
+      <!-- [Story 1, Task 1] This is the biography div: it provides a brief summary of my bio -->
+      <h2>Biography</h2>
+      <p> Hello. My name is Sang. This page is provided to help you learn more about me. Before I start with a quick
+        bio, I want to thank you for taking the time to visit. </p>
+      <p> I currently reside in Seattle, WA. I have been a transplant to the Pacific Northwest (PNW) since 2015. My wife
+        and I both work in the technology sector and have couple of rug rats in tow. I am currently taking some time off
+        from the industry to tackle personal projects (e.g. home improvement) and growth (e.g. learning to code!). Prior
+        to the tech industry, I served active duty in the U.S. Air Force for about 10 years. </P>
+    </div>
+    <div id="goals">
+      <!-- [Story 1, Task 1] This is the Goals div: it describes my goal for being part of code fellows-->
+      <h2>Goals (e.g. Why Code Fellows?)</h2>
+      <p> My goal in attending Code Fellows is to build my software development technical skills. I have been working
+        with software (and hardware) developers but in order to better understand the "under the hood" technology, I
+        wanted to get more hands-on developer experience. </p>
+    </div>
+    <div id="history">
+      <div id="education">
+        <!-- [Story 1, Task 1; Story 3, Task 2] This is the biography div: it provides a brief overview of my education-->
+        <h2>Education </h2>
+        <ul>
+          <li>Carnegie-Mellon University, MBA (2014)</li>
+          <li>Georgia Institute of Technology, BS (2000)</li>
+        </ul>
       </div>
-    </main>
-    <footer> 
-      &copy; 2020 sangmlee | Seattle, WA
-    </footer>
-    <script src="js/app.js" type="text/javascript"> </script>
-  </body>
+      <div id="experience">
+        <!-- [Story 1, Task 1; Story 3, Task 2] This is the experience div: it provides a brief overview of my work experience-->
+        <h2>Experience</h2>
+        <ul>
+          <li>Amazon.com, Inc. (2016 - 2020)</li>
+          <li>Intel Corporation (2014 - 2016)</li>
+          <li>United States Air Force (2002 - 2012)</li>
+        </ul>
+      </div>
+    </div>
+    <div id="topTen">
+      <!-- [Story 3, Task 1] This is the Goals div: it describes my goal for being part of code fellows-->
+      <h2 class="topTenTitle">Top 10 Favorite Foreign Movies</h2>
+      <ol>
+        <li>Bicycle Thieves (Italy, 1948)</li>
+        <li>Lives of Others (Germany, 2006)</li>
+        <li>Once (Ireland, 2007)</li>
+        <li>Monsoon Wedding (India, 2001)</li>
+        <li>Persepolis (France, 2007)</li>
+        <li>Amelie (France, 2001)</li>
+        <li>Chungking Express (Hong Kong, 1996)</li>
+        <li>Friend (South Korea, 2001)</li>
+        <li>Il Postino (Italy, 1994)</li>
+        <li>Kung Fu Hustle (China, 2004)</li>
+      </ol>
+    </div>
+  </main>
+  <footer>
+    &copy; 2020 sangmlee | Seattle, WA
+  </footer>
+  <script src="js/app.js" type="text/javascript"> </script>
+</body>
+
 </html>
